--- a/upload/public/.htaccess
+++ b/upload/public/.htaccess
@@ -7,13 +7,13 @@ Options -Indexes
 RewriteEngine On
 RewriteBase /
 
-RewriteCond %{HTTP_HOST} ^www\.bitsybay\.com
-RewriteRule ^(.*)$ http://bitsybay.com$1 [R=permanent,L]
-RewriteCond %{HTTPS_HOST} ^www\.bitsybay\.com
-RewriteRule ^(.*)$ https://bitsybay.com$1 [R=permanent,L]
+RewriteCond %{HTTP_HOST} ^www\.(.+) [NC]
+RewriteRule ^(.*) https://%1/$1 [NE,L,R=301]
+
+RewriteCond %{HTTPS} off
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_URI} !.*\.(ico|gif|jpg|jpeg|png|js|css)
 RewriteRule ^([^?]*) index.php?_route_=$1 [L,QSA]
-
